--- a/dogwalkingapp/client/src/locales/en/translation.json
+++ b/dogwalkingapp/client/src/locales/en/translation.json
@@ -33,6 +33,7 @@
     "Select User Type": "Select User Type",
     "Walker": "Walker",
     "Client": "Client",
+    "Anonymous": "Anonymous",
     "Line 1": "This Is A dog Walkin App",
     "Enter Your Details To Login": "Enter Your Details To Login",
     "Enter Username": "Enter Username",
@@ -82,22 +83,111 @@
     "Comment": "Comment",
     "Submit Query": "Submit Query",
     "Register Dog": "Register Dog",
-    "My Dogs":"My Dogs",
-    "My Bookings":"My Bookings",
-    "Book Walk":"Book Walk",
-    "ClientHome":"ClientHome", "Dog Name": "Dog Name",
+    "My Dogs": "My Dogs",
+    "My Bookings": "My Bookings",
+    "Book Walk": "Book Walk",
+    "ClientHome": "ClientHome",
+    "Dog Name": "Dog Name",
     "Dog Age": "Dog Age",
     "Dog Weight": "Dog Weight",
     "Dog Image": "Dog Image",
     "Dog Age Period": "Dog Age Period",
     "Dog Breed": "Dog Breed",
-    "Dog Behaviour": "Dog Behaviour", "Register Your Pet": "Register Your Pet","Select Age Period":"Select Age Period","Select Dog Breed": "Select Dog Breed",
-    "Select Dog Behaviour": "Select Dog Behaviour", "Minutes of walk": "Minutes de marche",
+    "Dog Behaviour": "Dog Behaviour",
+    "Register Your Pet": "Register Your Pet",
+    "Select Age Period": "Select Age Period",
+    "Select Dog Breed": "Select Dog Breed",
+    "Select Dog Behaviour": "Select Dog Behaviour",
+    "Minutes of walk": "Minutes de marche",
     "Walker Name": "Nom du promeneur",
     "Date & Time of Booking": "Date & Time of Booking",
     "From Time": "From Time",
     "To Time": "To Time",
-    "Date For Booking": "Date For Booking","Add Breeds":"Add Breeds",
-    "Admin Profile Management":"Admin Profile Management",
-    "Change password":"Change Password"
+    "Date For Booking": "Date For Booking",
+    "Add Breeds": "Add Breeds",
+    "Admin Profile Management": "Admin Profile Management",
+    "Change password": "Change Password",
+    "Update Profile": "Update Profile",
+    "Save Changes": "Save Changes",
+    "Cancel": "Cancel",
+    "Profile Updated Successfully": "Profile Updated Successfully",
+    "Failed to Update Profile": "Failed to Update Profile",
+    "Loading": "Loading",
+    "Please Wait": "Please Wait",
+    "Search": "Search",
+    "Clear": "Clear",
+    "Apply Filters": "Apply Filters",
+    "Filters": "Filters",
+    "Sort By": "Sort By",
+    "Ascending": "Ascending",
+    "Descending": "Descending",
+    "Active Users": "Active Users",
+    "Inactive Users": "Inactive Users",
+    "Statistics": "Statistics",
+    "Total Bookings": "Total Bookings",
+    "Total Dogs Registered": "Total Dogs Registered",
+    "Revenue Statistics": "Revenue Statistics",
+    "Performance": "Performance",
+    "Settings": "Settings",
+    "Help": "Help",
+    "FAQ": "FAQ",
+    "Contact Support": "Contact Support",
+    "Privacy Policy": "Privacy Policy",
+    "Terms of Service": "Terms of Service",
+    "Logout Confirmation": "Are you sure you want to logout?",
+    "Yes": "Yes",
+    "No": "No",
+    "Delete Confirmation": "Are you sure you want to delete this user?",
+    "User Deleted Successfully": "User Deleted Successfully",
+    "Failed to Delete User": "Failed to Delete User",
+    "Edit Profile": "Edit Profile",
+    "Change Email": "Change Email",
+    "Current Password": "Current Password",
+    "New Password": "New Password",
+    "Confirm New Password": "Confirm New Password",
+    "Password Change Successful": "Password Change Successful",
+    "Password Change Failed": "Password Change Failed",
+    "Invalid Current Password": "Invalid Current Password",
+    "Password Mismatch": "Passwords do not match",
+    "Field Required": "This field is required",
+    "Select Option": "Select Option",
+    "More": "More",
+    "Less": "Less",
+    "View More": "View More",
+    "View Less": "View Less",
+    "Notifications": "Notifications",
+    "Mark as Read": "Mark as Read",
+    "Delete Notification": "Delete Notification",
+    "You have no new notifications": "You have no new notifications",
+    "View Detail": "View Detail",
+    "Lock": "Lock",
+    "Unlock": "Unlock",
+    "You Are Not Authorized To View This Content Please Login If You Are Admin To View This Content": "You Are Not Authorized To View This Content Please Login If You Are Admin To View This Content",
+    "Go To Home Page": "Go To Home Page",
+    "Welcome To Website": "Welcome To Website",
+    "Contact Queries": "Contact Queries",
+    "About Us": "About Us",
+    "Explore our Dog Walking services. Choose from 15, 30, or 45-minute walks. Pricing adjusts accordingly.": "Explore our Dog Walking services. Choose from 15, 30, or 45-minute walks. Pricing adjusts accordingly.",
+    "Select Duration:": "Select Duration:",
+    "15 min": "15 min",
+    "30 min": "30 min",
+    "45 min": "45 min",
+    "Charge for this walk: ₹": "Charge for this walk: ₹",
+    "Minimum 2 characters ": "Minimum 2 characters",
+    "Full Name is Required": "Full Name is Required",
+    "Invalid Email": "Invalid Email",
+    "Email Required!!!": "Email Required!!!",
+    "That doesn't look like a phone number": "That doesn't look like a phone number",
+    "A phone number can't start with a minus": "A phone, number can't start with a minus",
+    "A phone number can't include a decimal point": "A phone number can't include a decimal point",
+    "Minimum 10 numbers are required": "Minimum 10 numbers are required",
+    "A phone number is required": "A phone number is required",
+    "User Type is required": "User Type is required",
+    "Minimum 100 character are required": "Minimum 100 characters are required",
+    "Comments are required so that we can understand your problem": "Comments are required so that we can understand your problem",
+    "Id": "Id",
+    "Phone Number": "Phone Number",
+    "Change Password": "Change Password",
+    "You Are Not Authorized to View This Content If You Are Admin Please Login to View This Content": "You Are Not Authorized to View This Content If You Are Admin Please Login to View This Content",
+    "Go Back To Home": "Go Back To Home"
 }
