--- a/dogwalkingapp/client/src/locales/fr/translation.json
+++ b/dogwalkingapp/client/src/locales/fr/translation.json
@@ -66,7 +66,7 @@
     "Do not include special characters": "Ne pas inclure de caractères spéciaux",
     "Password is required": "Le mot de passe est requis",
     "Email is required": "L'e-mail est requis",
-    "Invalid email address": "Adresse e-mail invalide",
+    "Invalid Email Address": "Adresse e-mail invalide",
     "Pls Select Image": "Veuillez sélectionner une image",
     "Address Line 1 field is required": "Le champ Adresse ligne 1 est requis",
     "Address Line 2 field is required": "Le champ Adresse ligne 2 est requis",
@@ -105,5 +105,87 @@
     "Add Breeds": "Ajouter des races",
     "My Profile": "Mon profil",
     "Admin Profile Management": "Gestion du profil administrateur",
-    "Change Password": "Changer le mot de passe"
+    "Change Password": "Changer le mot de passe",
+    "Update Profile": "Mettre à jour le profil",
+    "Save Changes": "Sauvegarder les modifications",
+    "Cancel": "Annuler",
+    "Profile Updated Successfully": "Profil mis à jour avec succès",
+    "Failed to Update Profile": "Échec de la mise à jour du profil",
+    "Loading": "Chargement",
+    "Please Wait": "Veuillez patienter",
+    "Search": "Rechercher",
+    "Clear": "Effacer",
+    "Apply Filters": "Appliquer les filtres",
+    "Filters": "Filtres",
+    "Sort By": "Trier par",
+    "Ascending": "Ascendant",
+    "Descending": "Descendant",
+    "Active Users": "Utilisateurs actifs",
+    "Inactive Users": "Utilisateurs inactifs",
+    "Statistics": "Statistiques",
+    "Total Bookings": "Total des réservations",
+    "Total Dogs Registered": "Total des chiens enregistrés",
+    "Revenue Statistics": "Statistiques de revenus",
+    "Performance": "Performance",
+    "Settings": "Paramètres",
+    "Help": "Aide",
+    "FAQ": "FAQ",
+    "Contact Support": "Support de contact",
+    "Privacy Policy": "Politique de confidentialité",
+    "Terms of Service": "Conditions d'utilisation",
+    "Logout Confirmation": "Êtes-vous sûr de vouloir vous déconnecter ?",
+    "Yes": "Oui",
+    "No": "Non",
+    "Delete Confirmation": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
+    "User Deleted Successfully": "Utilisateur supprimé avec succès",
+    "Failed to Delete User": "Échec de la suppression de l'utilisateur",
+    "Edit Profile": "Modifier le profil",
+    "Change Email": "Changer l'email",
+    "Current Password": "Mot de passe actuel",
+    "New Password": "Nouveau mot de passe",
+    "Confirm New Password": "Confirmer le nouveau mot de passe",
+    "Password Change Successful": "Changement de mot de passe réussi",
+    "Password Change Failed": "Échec du changement de mot de passe",
+    "Invalid Current Password": "Mot de passe actuel invalide",
+    "Password Mismatch": "Les mots de passe ne correspondent pas",
+    "Field Required": "Champ requis",
+    "Select Option": "Sélectionner une option",
+    "More": "Plus",
+    "Less": "Moins",
+    "View More": "Voir plus",
+    "View Less": "Voir moins",
+    "Notifications": "Notifications",
+    "Mark as Read": "Marquer comme lu",
+    "Delete Notification": "Supprimer la notification",
+    "You have no new notifications": "Vous n'avez pas de nouvelles notifications",
+    "View Detail": "Voir le détail",
+    "Lock": "Verrouiller",
+    "Unlock": "Déverrouiller",
+    "You Are Not Authorized To View This Content Please Login If You Are Admin To View This Content": "Vous n'êtes pas autorisé à voir ce contenu. Veuillez vous connecter en tant qu'administrateur pour voir ce contenu",
+    "Go To Home Page": "Aller à la page d'accueil",
+    "Welcome To Website": "Bienvenue sur le site Web",
+    "Contact Queries": "Questions de contact",
+    "About Us": "À propos de nous",
+    "Explore our Dog Walking services. Choose from 15, 30, or 45-minute walks. Pricing adjusts accordingly.": "Explorez nos services de promenade de chiens. Choisissez parmi des promenades de 15, 30 ou 45 minutes. Les prix sont ajustés en conséquence.",
+    "Select Duration:": "Sélectionner la durée :",
+    "15 min": "15 min",
+    "30 min": "30 min",
+    "45 min": "45 min",
+    "Charge for this walk: ₹": "Tarif pour cette promenade : ₹",
+    "Minimum 2 characters ": "Minimum 2 caractères",
+    "Full Name is Required": "Le nom complet est requis",
+    "Invalid Email": "Email invalide",
+    "Email Required!!!": "Email requis !!!",
+    "That doesn't look like a phone number": "Cela ne ressemble pas à un numéro de téléphone",
+    "A phone number can't start with a minus": "Un numéro de téléphone ne peut pas commencer par un signe moins",
+    "A phone number can't include a decimal point": "Un numéro de téléphone ne peut pas inclure de point décimal",
+    "Minimum 10 numbers are required": "Un minimum de 10 chiffres est requis",
+    "A phone number is required": "Un numéro de téléphone est requis",
+    "User Type is required": "Le type d'utilisateur est requis",
+    "Minimum 100 character are required": "Un minimum de 100 caractères est requis",
+    "Comments are required so that we can understand your problem": "Des commentaires sont nécessaires pour que nous puissions comprendre votre problème",
+    "Id": "Identifiant",
+    "Phone Number": "Numéro de téléphone",
+    "You Are Not Authorized to View This Content If You Are Admin Please Login to View This Content": "Si vous êtes administrateur, veuillez vous connecter pour voir ce contenu, vous n'êtes pas autorisé à voir ce contenu",
+    "Go Back To Home": "Retourner à l'accueil"
 }
