--- a/dogwalkingapp/client/src/locales/pu/translation.json
+++ b/dogwalkingapp/client/src/locales/pu/translation.json
@@ -56,7 +56,7 @@
     "Client History": "ਗਾਹਕ ਇਤਿਹਾਸ",
     "Edit User": "ਯੂਜ਼ਰ ਸੋਧੋ",
     "User Type": "ਯੂਜ਼ਰ ਕਿਸਮ",
-    "Lock/Unlock User": "ਯੂਜ਼ਰ ਲਾਕ/ਅਨਲਾਕ ਕਰੋ",
+    "Lock/Unlock User": "ਯੂਜ਼ਰ ਨੂੰ ਲਾਕ/ਅਨਲਾਕ ਕਰੋ",
     "Add Client User": "ਗਾਹਕ ਯੂਜ਼ਰ ਸ਼ਾਮਲ ਕਰੋ",
     "Email is required": "ਕਿਰਪਾ ਕਰਕੇ ਈਮੇਲ ਦਾਖਲ ਕਰੋ!!!",
     "Password is Required": "ਪਾਸਵਰਡ ਦੀ ਲੋੜ ਹੈ",
@@ -67,7 +67,7 @@
     "Postal Code is required": "ਡਾਕ ਕੋਡ ਚਾਹੀਦਾ ਹੈ",
     "Pls Select Countrty": "ਕਿਰਪਾ ਕਰਕੇ ਦੇਸ਼ ਚੁਣੋ",
     "Pls Select State": "ਕਿਰਪਾ ਕਰਕੇ ਰਾਜ ਚੁਣੋ",
-    "Pls Select City": "ਕਿਰਪਾ ਕਰਕੇ ਸ਼ਹਰ ਚੁਣੋ",
+    "Pls Select City": "ਕਿਰਪਾ ਕਰਕੇ ਸ਼ਹਿਰ ਚੁਣੋ",
     "Punjabi": "ਪੰਜਾਬੀ",
     "English": "ਅੰਗਰੇਜ਼ੀ",
     "Employee Information Update": "ਕਰਮਚਾਰੀ ਜਾਣਕਾਰੀ ਅੱਪਡੇਟ",
@@ -100,5 +100,201 @@
     "Add Breeds": "ਨਸਲਾਂ ਸ਼ਾਮਲ ਕਰੋ",
     "My Profile": "ਮੇਰੀ ਪ੍ਰੋਫ਼ਾਈਲ",
     "Admin Profile Management": "ਐਡਮਿਨ ਪ੍ਰੋਫਾਈਲ ਪ੍ਰਬੰਧਨ",
-    "Change Password":"ਪਾਸਵਰਡ ਬਦਲੋ"
+    "View Detail": "ਵੇਰਵਾ ਵੇਖੋ",
+    "Lock": "ਤਾਲਾ ਲਗਾਓ",
+    "Unlock": "ਤਾਲਾ ਖੋਲ੍ਹੋ",
+    "Change Password": "ਪਾਸਵਰਡ ਬਦਲੋ",
+    "You Are Not Authorized To View This Content Please Login If You Are Admin To View This Content": "ਤੁਸੀਂ ਇਸ ਸਮੱਗਰੀ ਨੂੰ ਵੇਖਣ ਦੇ ਯੋਗ ਨਹੀਂ ਹੋ, ਜੇ ਤੁਸੀਂ ਪ੍ਰਬੰਧਕ ਹੋ ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਲਾਗਿਨ ਕਰੋ",
+    "Go To Home Page": "ਮੁੱਖ ਪੰਨੇ 'ਤੇ ਜਾਓ",
+    "User Id": "ਯੂਜ਼ਰ ਆਈਡੀ",
+    "View Details": "ਵੇਰਵੇ ਵੇਖੋ",
+    "Ascending": "ਉੱਪਰੀ",
+    "Descending": "ਹੇਠਲੀ",
+    "Statistics": "ਅੰਕੜੇ",
+    "Total Bookings": "ਕੁੱਲ ਬੁਕਿੰਗਾਂ",
+    "Total Dogs Registered": "ਕੁੱਲ ਰਜਿਸਟਰਡ ਕੁੱਤੇ",
+    "Revenue Statistics": "ਰੈਵੇਨਿ ਅੰਕੜੇ",
+    "Performance": "ਪ੍ਰਦਰਸ਼ਨ",
+    "Settings": "ਸੈਟਿੰਗਜ਼",
+    "Help": "ਮਦਦ",
+    "FAQ": "ਸਧਾਰਨ ਪ੍ਰਸ਼ਨ",
+    "Contact Support": "ਸਹਾਇਤਾ ਸੰਪਰਕ ਕਰੋ",
+    "Privacy Policy": "ਪਰਦੇਦਾਰੀ ਨੀਤੀ",
+    "Terms of Service": "ਸੇਵਾ ਦੀਆਂ ਸ਼ਰਤਾਂ",
+    "Logout Confirmation": "ਕੀ ਤੁਸੀਂ ਵਾਕਈ ਲਾਗ ਆਊਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?",
+    "Yes": "ਹਾਂ",
+    "No": "ਨਹੀਂ",
+    "Delete Confirmation": "ਕੀ ਤੁਸੀਂ ਵਾਕਈ ਇਸ ਯੂਜ਼ਰ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
+    "User Deleted Successfully": "ਯੂਜ਼ਰ ਸਫਲਤਾਪੂਰਵਕ ਮਿਟਾਇਆ ਗਿਆ",
+    "Failed to Delete User": "ਯੂਜ਼ਰ ਨੂੰ ਮਿਟਾਉਣ ਵਿੱਚ ਅਸਫਲ",
+    "Edit Profile": "ਪ੍ਰੋਫਾਈਲ ਸੋਧੋ",
+    "Change Email": "ਈਮੇਲ ਬਦਲੋ",
+    "Current Password": "ਮੌਜੂਦਾ ਪਾਸਵਰਡ",
+    "New Password": "ਨਵਾਂ ਪਾਸਵਰਡ",
+    "Confirm New Password": "ਨਵਾਂ ਪਾਸਵਰਡ ਪੁਸ਼ਟੀ ਕਰੋ",
+    "Password Change Successful": "ਪਾਸਵਰਡ ਬਦਲੀ ਸਫਲ",
+    "Password Change Failed": "ਪਾਸਵਰਡ ਬਦਲੀ ਅਸਫਲ",
+    "Password Mismatch": "ਪਾਸਵਰਡ ਮੇਲ ਨਹੀਂ ਖਾਂਦੇ",
+    "Invalid Current Password": "ਮੌਜੂਦਾ ਪਾਸਵਰਡ ਗ਼ੈਰ-ਮਾਨਯ ਹੈ",
+    "Field Required": "ਇਹ ਖੇਤਰ ਲੋੜੀਂਦਾ ਹੈ",
+    "Select Option": "ਚੋਣ ਚੁਣੋ",
+    "More": "ਵੱਧ",
+    "Less": "ਘੱਟ",
+    "View More": "ਹੋਰ ਦੇਖੋ",
+    "View Less": "ਘੱਟ ਦੇਖੋ",
+    "Notifications": "ਅਧਿਸੂਚਨਾਵਾਂ",
+    "Mark as Read": "ਪੜ੍ਹਿਆ ਹੋਇਆ ਚਿੰਨ੍ਹਤ ਕਰੋ",
+    "Delete Notification": "ਅਧਿਸੂਚਨਾ ਮਿਟਾਓ",
+    "You have no new notifications": "ਤੁਹਾਡੇ ਕੋਲ ਕੋਈ ਨਵੀਆਂ ਅਧਿਸੂਚਨਾਵਾਂ ਨਹੀਂ ਹਨ",
+    "Welcome To Website": "ਵੈਬਸਾਈਟ ਤੇ ਜੀ ਆਇਆਂ ਨੂੰ",
+    "Contact Queries": "ਸੰਪਰਕ ਪੁੱਛਗਿੱਛ",
+    "About Us": "ਸਾਡੇ ਬਾਰੇ",
+    "Explore our Dog Walking services. Choose from 15, 30, or 45-minute walks. Pricing adjusts accordingly.": "ਸਾਡੀਆਂ ਡੌਗ ਵਾਕਿੰਗ ਸੇਵਾਵਾਂ ਦੀ ਖੋਜ ਕਰੋ। 15, 30 ਜਾਂ 45 ਮਿੰਟ ਦੀਆਂ ਸੈਰਾਂ ਵਿੱਚੋਂ ਚੁਣੋ। ਕੀਮਤਾਂ ਅਨੁਸਾਰ ਸਮਾਯੋਜਿਤ ਕੀਤੀਆਂ ਜਾਂਦੀਆਂ ਹਨ।",
+    "Select Duration:": "ਅਵਧੀ ਚੁਣੋ:",
+    "15 min": "15 ਮਿੰਟ",
+    "30 min": "30 ਮਿੰਟ",
+    "45 min": "45 ਮਿੰਟ",
+    "Charge for this walk: ₹": "ਇਸ ਸੈਰ ਲਈ ਚਾਰਜ: ₹",
+    "Keep me logged in": "ਮੈਨੂੰ ਲਾਗਿਨ ਰੱਖੋ",
+    "Sign up": "ਸਾਇਨ ਅੱਪ ਕਰੋ",
+    "New User? Register Here!": "ਨਵਾਂ ਯੂਜ਼ਰ? ਇੱਥੇ ਰਜਿਸਟਰ ਕਰੋ!",
+    "Forgot Username?": "ਯੂਜ਼ਰ ਨਾਂ ਭੁੱਲ ਗਏ?",
+    "Reset Password": "ਪਾਸਵਰਡ ਰੀਸੈੱਟ ਕਰੋ",
+    "Enter your email to reset your password": "ਆਪਣਾ ਪਾਸਵਰਡ ਰੀਸੈੱਟ ਕਰਨ ਲਈ ਈਮੇਲ ਦਾਖਲ ਕਰੋ",
+    "Send Verification Code": "ਪ੍ਰਮਾਣਿਕਤਾ ਕੋਡ ਭੇਜੋ",
+    "Verify": "ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
+    "Verification Code": "ਪ੍ਰਮਾਣਿਕਤਾ ਕੋਡ",
+    "Enter Verification Code": "ਪ੍ਰਮਾਣਿਕਤਾ ਕੋਡ ਦਾਖਲ ਕਰੋ",
+    "Resend Code": "ਕੋਡ ਮੁੜ ਭੇਜੋ",
+    "Complete Registration": "ਰਜਿਸਟਰੇਸ਼ਨ ਪੂਰਾ ਕਰੋ",
+    "User Agreement": "ਯੂਜ਼ਰ ਸਮਝੌਤਾ",
+    "Accept Terms": "ਸ਼ਰਤਾਂ ਨੂੰ ਮੰਨੋ",
+    "Decline": "ਅਸਵੀਕਾਰ ਕਰੋ",
+    "Session Expired": "ਸੈਸ਼ਨ ਮਿਆਦ ਪੁੱਗੀ",
+    "Session Timeout": "ਸੈਸ਼ਨ ਟਾਈਮਆਊਟ",
+    "Access Denied": "ਪਹੁੰਚ ਅਸਵੀਕ੃ਤ",
+    "Service Unavailable": "ਸੇਵਾ ਉਪਲਬਧ ਨਹੀਂ",
+    "Server Error": "ਸਰਵਰ ਗਲਤੀ",
+    "Please try again later": "ਕਿਰਪਾ ਕਰਕੇ ਬਾਅਦ ਵਿੱਚ ਮੁੜ ਕੋਸ਼ਿਸ਼ ਕਰੋ",
+    "Contact Administrator": "ਪ੍ਰਬੰਧਕ ਨਾਲ ਸੰਪਰਕ ਕਰੋ",
+    "User Profile": "ਯੂਜ਼ਰ ਪ੍ਰੋਫ਼ਾਈਲ",
+    "Change Profile Picture": "ਪ੍ਰੋਫ਼ਾਈਲ ਚਿੱਤਰ ਬਦਲੋ",
+    "Update Information": "ਜਾਣਕਾਰੀ ਅੱਪਡੇਟ ਕਰੋ",
+    "Delete Account": "ਖਾਤਾ ਮਿਟਾਓ",
+    "Security Settings": "ਸੁਰੱਖਿਆ ਸੈਟਿੰਗਜ਼",
+    "Change Security Question": "ਸੁਰੱਖਿਆ ਪ੍ਰਸ਼ਨ ਬਦਲੋ",
+    "Update Security Settings": "ਸੁਰੱਖਿਆ ਸੈਟਿੰਗਜ਼ ਅੱਪਡੇਟ ਕਰੋ",
+    "Notification Settings": "ਅਧਿਸੂਚਨਾ ਸੈਟਿੰਗਜ਼",
+    "Enable Notifications": "ਅਧਿਸੂਚਨਾਵਾਂ ਯੋਗ ਕਰੋ",
+    "Disable Notifications": "ਅਧਿਸੂਚਨਾਵਾਂ ਅਯੋਗ ਕਰੋ",
+    "Manage Subscriptions": "ਸਬਸਕ੍ਰਿਪਸ਼ਨਾਂ ਪ੍ਰਬੰਧਨ ਕਰੋ",
+    "Subscription Details": "ਸਬਸਕ੍ਰਿਪਸ਼ਨ ਵੇਰਵੇ",
+    "Renew Subscription": "ਸਬਸਕ੍ਰਿਪਸ਼ਨ ਨਵੀਨੀਕਰਨ ਕਰੋ",
+    "Cancel Subscription": "ਸਬਸਕ੍ਰਿਪਸ਼ਨ ਰੱਦ ਕਰੋ",
+    "Error": "ਗਲਤੀ",
+    "Success": "ਸਫਲਤਾ",
+    "Warning": "ਚੇਤਾਵਨੀ",
+    "Information": "ਜਾਣਕਾਰੀ",
+    "Please fill out this field.": "ਕਿਰਪਾ ਕਰਕੇ ਇਸ ਖੇਤਰ ਨੂੰ ਭਰੋ।",
+    "Loading...": "ਲੋਡ ਹੋ ਰਿਹਾ ਹੈ...",
+    "No data available": "ਕੋਈ ਡਾਟਾ ਉਪਲਬਧ ਨਹੀਂ ਹੈ",
+    "Are you sure?": "ਕੀ ਤੁਸੀਂ ਪੱਕਾ ਹੋ?",
+    "Please confirm": "ਕਿਰਪਾ ਕਰਕੇ ਪੁਸ਼ਟੀ ਕਰੋ",
+    "Retry": "ਮੁੜ ਕੋਸ਼ਿਸ਼ ਕਰੋ",
+    "Skip": "ਛੱਡੋ",
+    "Submit": "ਜਮ੍ਹਾਂ ਕਰੋ",
+    "Cancel": "ਰੱਦ ਕਰੋ",
+    "Back": "ਪਿੱਛੇ",
+    "Next": "ਅਗਲਾ",
+    "Finish": "ਮੁਕੰਮਲ",
+    "Save": "ਸੰਭਾਲੋ",
+    "Delete": "ਮਿਟਾਓ",
+    "Create": "ਬਣਾਓ",
+    "Search": "ਖੋਜ",
+    "Filter": "ਫਿਲਟਰ",
+    "Refresh": "ਰੀਫਰੈਸ਼",
+    "View": "ਵੇਖੋ",
+    "Details": "ਵੇਰਵੇ",
+    "Status": "ਸਥਿਤੀ",
+    "Active": "ਸਰਗਰਮ",
+    "Inactive": "ਨਿਸ਼ਕ੍ਰਿਯ",
+    "Disabled": "ਅਯੋਗ",
+    "Enable": "ਯੋਗ ਕਰੋ",
+    "Disable": "ਅਯੋਗ ਕਰੋ",
+    "Select All": "ਸਭ ਚੁਣੋ",
+    "Unselect All": "ਸਭ ਨੂੰ ਅਣਚੁਣੋ",
+    "None": "ਕੋਈ ਨਹੀਂ",
+    "All": "ਸਾਰੇ",
+    "Show": "ਦਿਖਾਓ",
+    "Hide": "ਓਹਲੇ",
+    "Visibility": "ਦਿੱਖ",
+    "Username": "ਯੂਜ਼ਰ ਨਾਂ",
+    "Remember Me": "ਮੈਨੂੰ ਯਾਦ ਰੱਖੋ",
+    "Forgot Password?": "ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
+    "Sign In": "ਸਾਇਨ ਇਨ ਕਰੋ",
+    "Sign Out": "ਸਾਇਨ ਆਊਟ ਕਰੋ",
+    "Register Now": "ਹੁਣੇ ਰਜਿਸਟਰ ਕਰੋ",
+    "Terms and Conditions": "ਸ਼ਰਤਾਂ ਅਤੇ ਹਾਲਾਤ",
+    "Contact Us": "ਸਾਡੇ ਨਾਲ ਸੰਪਰਕ ਕਰੋ",
+    "Documentation": "ਦਸਤਾਵੇਜ਼ੀਕਰਨ",
+    "Report a problem": "ਇੱਕ ਸਮੱਸਿਆ ਦੀ ਰਿਪੋਰਟ ਕਰੋ",
+    "What's New": "ਕੀ ਨਵਾਂ ਹੈ",
+    "Application Settings": "ਐਪਲੀਕੇਸ਼ਨ ਸੈਟਿੰਗਜ਼",
+    "Language": "ਭਾਸ਼ਾ",
+    "Profile": "ਪ੍ਰੋਫ਼ਾਈਲ",
+    "Account": "ਖਾਤਾ",
+    "Change Language": "ਭਾਸ਼ਾ ਬਦਲੋ",
+    "Log in to continue": "ਜਾਰੀ ਰੱਖਣ ਲਈ ਲਾਗਿਨ ਕਰੋ",
+    "Username or Email": "ਯੂਜ਼ਰ ਨਾਂ ਜਾਂ ਈਮੇਲ",
+    "Payment History": "ਭੁਗਤਾਨ ਇਤਿਹਾਸ",
+    "View Invoices": "ਇਨਵੌਇਸ ਵੇਖੋ",
+    "Download Invoice": "ਇਨਵੌਇਸ ਡਾਊਨਲੋਡ ਕਰੋ",
+    "Support Tickets": "ਸਹਾਇਤਾ ਟਿਕਟ",
+    "Create Ticket": "ਟਿਕਟ ਬਣਾਓ",
+    "Ticket Status": "ਟਿਕਟ ਸਥਿਤੀ",
+    "Close Ticket": "ਟਿਕਟ ਬੰਦ ਕਰੋ",
+    "Reopen Ticket": "ਟਿਕਟ ਮੁੜ ਖੋਲ੍ਹੋ",
+    "Submit Response": "ਜਵਾਬ ਜਮ੍ਹਾਂ ਕਰੋ",
+    "View Response": "ਜਵਾਬ ਵੇਖੋ",
+    "Update Ticket": "ਟਿਕਟ ਅੱਪਡੇਟ ਕਰੋ",
+    "Delete Ticket": "ਟਿਕਟ ਮਿਟਾਓ",
+    "User Management": "ਯੂਜ਼ਰ ਪ੍ਰਬੰਧਨ",
+    "Add User": "ਯੂਜ਼ਰ ਜੋੜੋ",
+    "Remove User": "ਯੂਜ਼ਰ ਹਟਾਓ",
+    "Update User": "ਯੂਜ਼ਰ ਅੱਪਡੇਟ ਕਰੋ",
+    "User List": "ਯੂਜ਼ਰ ਸੂਚੀ",
+    "User Roles": "ਯੂਜ਼ਰ ਭੂਮਿਕਾਵਾਂ",
+    "Assign Roles": "ਭੂਮਿਕਾਵਾਂ ਸੌਂਪੋ",
+    "Permissions": "ਅਧਿਕਾਰ",
+    "Grant Access": "ਪਹੁੰਚ ਦੇਣਾ",
+    "Revoke Access": "ਪਹੁੰਚ ਰੱਦ ਕਰੋ",
+    "Activity Log": "ਗਤੀਵਿਧੀ ਲਾਗ",
+    "System Settings": "ਸਿਸਟਮ ਸੈਟਿੰਗਜ਼",
+    "Update System": "ਸਿਸਟਮ ਅੱਪਡੇਟ ਕਰੋ",
+    "Backup and Restore": "ਬੈਕਅੱਪ ਅਤੇ ਮੁੜ-ਸਥਾਪਨ",
+    "Database Management": "ਡਾਟਾਬੇਸ ਪ੍ਰਬੰਧਨ",
+    "Optimize Database": "ਡਾਟਾਬੇਸ ਨੂੰ ਅਨੁਕੂਲ ਬਣਾਓ",
+    "Export Data": "ਡਾਟਾ ਨਿਰਯਾਤ ਕਰੋ",
+    "Import Data": "ਡਾਟਾ ਆਯਾਤ ਕਰੋ",
+    "System Diagnostics": "ਸਿਸਟਮ ਡਾਇਗਨੋਸਟਿਕਸ",
+    "Run Diagnostics": "ਡਾਇਗਨੋਸਟਿਕਸ ਚਲਾਓ",
+    "System Health": "ਸਿਸਟਮ ਸਿਹਤ",
+    "System Updates": "ਸਿਸਟਮ ਅੱਪਡੇਟਸ",
+    "Check for Updates": "ਅੱਪਡੇਟਸ ਲਈ ਚੈੱਕ ਕਰੋ",
+    "Apply Updates": "ਅੱਪਡੇਟਸ ਲਾਗੂ ਕਰੋ",
+    "System Information": "ਸਿਸਟਮ ਜਾਣਕਾਰੀ",
+    "Version": "ਵਰਜਨ",
+    "License Information": "ਲਾਇਸੈਂਸ ਜਾਣਕਾਰੀ",
+    "Registered To": "ਨਾਮ ਦਰਜ ਹੈ",
+    "Serial Number": "ਸੀਰੀਅਲ ਨੰਬਰ",
+    "Support Information": "ਸਹਾਇਤਾ ਜਾਣਕਾਰੀ",
+    "User Guide": "ਯੂਜ਼ਰ ਗਾਈਡ",
+    "Developer API": "ਡਿਵੈਲਪਰ API",
+    "API Documentation": "API ਦਸਤਾਵੇਜ਼ੀਕਰਨ",
+    "Error Logs": "ਗਲਤੀ ਲਾਗ",
+    "Clear Logs": "ਲਾਗ ਸਾਫ਼ ਕਰੋ",
+    "Id": "ਆਈਡੀ","Phone Number": "ਫੋਨ ਨੰਬਰ",
+    "You Are Not Authorized to View This Content If You Are Admin Please Login to View This Content": "ਜੇ ਤੁਸੀਂ ਪ੍ਰਸ਼ਾਸਕ ਹੋ ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਇਸ ਸਮੱਗਰੀ ਨੂੰ ਵੇਖਣ ਲਈ ਲਾਗਿਨ ਕਰੋ, ਤੁਹਾਨੂੰ ਇਸ ਸਮੱਗਰੀ ਨੂੰ ਵੇਖਣ ਦੀ ਅਧਿਕਾਰਤਾ ਨਹੀਂ ਹੈ",
+    "Go Back To Home": "ਮੁੱਖ ਪੰਨਾ 'ਤੇ ਵਾਪਸ ਜਾਓ"
 }
+   
